Added color variables

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,5 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
+$bg-color: #353535;
+$primary-color: #9f572d;
+$black: #000;
+$white: #fff;
