Changed color variables

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,5 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
-$bg-color: #353535;
-$primary-color: #9f572d;
+$bg-color: #1f1f1f;
+$primary-color: #b11010;
 $black: #000;
 $white: #fff;
