--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
 $bg-color: #1f1f1f;
-$primary-color: #b11010;
+$primary-color: #ba2323;
 $black: #000;
+$gray: #2b2b2b;
 $white: #fff;
