--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,10 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
 $bg-color: #1f1f1f;
-$primary-color: #238fba;
+$primary-color: #1e7ad1;
 $black: #000;
 $gray: #2b2b2b;
 $lighter-gray: #303030;
 $white: #fff;
 $green: #2d954b;
 $red: #d31a1a;
+$orange: #FF3E00;
