--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,6 +5,7 @@ $black: #000;
 $gray: #2b2b2b;
 $lighter-gray: #303030;
 $white: #fff;
+$light-gray: #c8c8c8;
 $green: #2d954b;
 $red: #d31a1a;
 $orange: #FF3E00;
