--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,10 +2,10 @@
 $bg-color: #1f1f1f;
 $primary-color: #1e7ad1;
 $black: #000;
-$gray: #2b2b2b;
-$lighter-gray: #303030;
+$dark-gray: #2b2b2b;
+$gray: #303030;
 $white: #fff;
-$light-gray: #c8c8c8;
+$light-gray: #d9d9d9;
 $green: #2d954b;
 $red: #d31a1a;
 $orange: #FF3E00;
